<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.blake.georgian.dollify.dollify.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/mainMenuRelativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleString"
        android:layout_marginTop="58dp"
        android:singleLine="false"
        android:width="@dimen/titleWidth"
        android:height="@dimen/titleHeight"
        android:textSize="@dimen/titleTextSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleTextBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionsButtonText"
        android:id="@+id/instructionsButton"
        android:layout_below="@+id/titleTextBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textSize="@dimen/buttonTextSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButtonText"
        android:id="@+id/startButton"
        android:textSize="@dimen/buttonTextSize"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quitButtonText"
        android:id="@+id/quitButton"
        android:layout_marginTop="48dp"
        android:textSize="@dimen/buttonTextSize"
        android:layout_below="@+id/startButton"
        android:layout_alignStart="@+id/startButton" />
</RelativeLayout>
