<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.blake.georgian.dollify.dollify.instructionsActivity"
    tools:showIn="@layout/activity_instructions"
    android:id="@+id/instructionsRelativeLayout"
    android:background="@color/backgroundColour">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/instructionsImageView"
        android:src="@drawable/howto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionText01"
        android:id="@+id/instructionTextView1"
        android:textSize="@dimen/instructionsTextSize"
        android:layout_below="@+id/instructionsImageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/instructionTextTopMargin"
        android:singleLine="false"
        android:textColor="#6b5270" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionText02"
        android:id="@+id/instructionTextView2"
        android:textSize="@dimen/instructionsTextSize"
        android:layout_below="@+id/instructionTextView1"
        android:layout_marginTop="@dimen/instructionTextTopMargin"
        android:layout_alignParentStart="true"
        android:textColor="#6b5270" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionText04"
        android:id="@+id/instructionTextView4"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/instructionsTextSize"
        android:layout_marginTop="@dimen/instructionTextTopMargin"
        android:layout_alignParentStart="true"
        android:textColor="#6b5270"
        android:layout_below="@+id/instructionTextView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionText05"
        android:id="@+id/instructionTextView5"
        android:layout_below="@+id/instructionTextView4"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/instructionsTextSize"
        android:layout_marginTop="@dimen/instructionTextTopMargin"
        android:layout_alignParentStart="true"
        android:textColor="#6b5270" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionText06"
        android:id="@+id/instructionTextView6"
        android:layout_below="@+id/instructionTextView5"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/instructionsTextSize"
        android:layout_marginTop="@dimen/instructionTextTopMargin"
        android:layout_alignParentStart="true"
        android:textColor="#6b5270" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionText07"
        android:id="@+id/instructionTextView7"
        android:layout_below="@+id/instructionTextView6"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/instructionsTextSize"
        android:layout_marginTop="@dimen/instructionTextTopMargin"
        android:layout_alignParentStart="true"
        android:textColor="#6b5270" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/backbutton1" />

</RelativeLayout>
