<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.blake.georgian.dollify.dollify.AboutUsActivity"
    tools:showIn="@layout/activity_about_us"
    android:id="@+id/aboutUsRelativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsTitleText"
        android:id="@+id/aboutUsTitleTextBox"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/titleTextSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsDescriptionText"
        android:id="@+id/aboutUsDescriptionTextView"
        android:layout_marginTop="111dp"
        android:layout_below="@+id/aboutUsTitleTextBox"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/aboutUsTextSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButtonText"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
