<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.blake.georgian.dollify.dollify.FinishActivity"
    tools:showIn="@layout/activity_finish"
    android:id="@+id/finishRelativeLayout"
    android:background="@color/backgroundColour">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveCompleteText"
        android:id="@+id/saveCompleteTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textAlignment="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bodyFrameLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="@dimen/imageWidth"
            android:layout_height="wrap_content"
            android:id="@+id/bodyImageView"
            android:scaleType="matrix"
            android:layout_gravity="center" />
    </FrameLayout>

    <ImageView
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:id="@+id/topImageFinish"
        android:scaleType="matrix"
        android:layout_alignStart="@+id/middleImageFinish"
        android:layout_alignTop="@+id/middleImageFinish" />

    <ImageView
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:id="@+id/bottomImageFinish"
        android:scaleType="matrix"
        android:layout_centerVertical="true"
        android:layout_alignStart="@id/middleImageFinish" />

    <ImageView
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:id="@+id/middleImageFinish"
        android:scaleType="matrix"
        android:layout_alignTop="@+id/bottomImageFinish"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveImageButtonText"
        android:id="@+id/saveImageButton"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButtonText"
        android:id="@+id/resetButton"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
