<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.blake.georgian.dollify.dollify.StartActivity"
    tools:showIn="@layout/activity_start"
    android:id="@+id/startRelativeLayout">

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/rightArrowButtonText"
        android:id="@+id/rightArrowButton4"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/topMarginSkinColour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skinColourText"
        android:id="@+id/skinTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="25sp" />

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/leftArrowButtonText"
        android:id="@+id/leftArrowButton4"
        android:singleLine="false"
        android:layout_alignEnd="@+id/leftArrowButton1"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/topMarginSkinColour" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bodyImageView"
        android:layout_alignParentStart="true"
        android:id="@+id/bodyBackgroundFrameLayout">

        <ImageView
            android:layout_width="@dimen/imageWidth"
            android:layout_height="wrap_content"
            android:id="@+id/bodyImageView"
            android:layout_below="@+id/nextButton"
            android:layout_centerHorizontal="true"
            android:src="@drawable/body02"
            android:scaleType="matrix"
            android:layout_gravity="center" />

    </FrameLayout>

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/leftArrowButtonText"
        android:id="@+id/leftArrowButton1"
        android:singleLine="false"
        android:layout_above="@+id/leftArrowButton2"
        android:layout_marginBottom="39dp" />

    <ImageView
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:id="@+id/topImageFinish"
        android:src="@drawable/beanie04"
        android:scaleType="matrix"
        android:layout_alignTop="@+id/middleImageFinish"
        android:layout_alignStart="@+id/middleImageFinish" />

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/rightArrowButtonText"
        android:id="@+id/rightArrowButton1"
        android:layout_alignTop="@+id/leftArrowButton1"
        android:layout_alignStart="@id/nextButton"
        android:layout_marginLeft="@dimen/leftMargin" />

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/leftArrowButtonText"
        android:id="@+id/leftArrowButton2"
        android:layout_alignTop="@+id/rightArrowButton2" />

    <ImageView
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:id="@+id/bottomImageFinish"
        android:src="@drawable/boxers05"
        android:scaleType="matrix"
        android:layout_centerVertical="true"
        android:layout_alignStart="@id/middleImageFinish" />

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/rightArrowButtonText"
        android:id="@+id/rightArrowButton2"
        android:layout_above="@+id/rightArrowButton3"
        android:layout_alignStart="@id/nextButton"
        android:layout_marginLeft="@dimen/leftMargin" />

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/leftArrowButtonText"
        android:id="@+id/leftArrowButton3"
        android:layout_alignTop="@+id/rightArrowButton3" />

    <ImageView
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:id="@+id/middleImageFinish"
        android:src="@drawable/tank04"
        android:scaleType="matrix"
        android:layout_alignTop="@+id/bottomImageFinish"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/buttonStartWidth"
        android:layout_height="@dimen/buttonStartHeight"
        android:text="@string/rightArrowButtonText"
        android:id="@+id/rightArrowButton3"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="52dp"
        android:layout_alignBottom="@+id/topImageFinish"
        android:layout_alignStart="@+id/nextButton"
        android:layout_marginLeft="@dimen/leftMargin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButtonString"
        android:id="@+id/nextButton"
        android:layout_below="@+id/topImageFinish"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
